INFRA-469: cleanup