@@ -1,9 +1,6 @@
 package id.global.plugin.model.generator;
 
 import com.sun.codemodel.JCodeModel;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
-
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
@@ -17,14 +14,18 @@ import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
 import org.jsonschema2pojo.*;
 import org.jsonschema2pojo.rules.RuleFactory;
-
-import java.io.*;
-
-import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 
-import java.nio.file.Path;
+
+import java.io.IOException;
+import java.io.InputStream;
+
+
+import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
+
+import java.util.Comparator;
+import java.util.stream.Stream;
 
 @Mojo(name = "generate-amqp-models", defaultPhase = LifecyclePhase.COMPILE)
 public class AmqpGeneratorMojo extends AbstractMojo {
@@ -54,129 +55,119 @@ public class AmqpGeneratorMojo extends AbstractMojo {
     String modelName;
 
 
-    private static final String srcJava = "aaa/src/main/java";
-    private static final String schemaTempDir = "aaa/schemas";
-    private static final String tmpDirectory = "/";
-
-
     private static final String temporaryFolder = "/models/";
     private static final String temporarySourceFolder = temporaryFolder + "src/main/java/";
     private static final String temporarySchemaFolder = temporaryFolder + "schemas/";
+    private static final String resourceFolder = temporaryFolder + "src/main/resources/";
 
 
     public void execute() throws MojoExecutionException, MojoFailureException {
         cleanUpDirectories();
         if (artifactSource == ArtifactSource.FILE) {
             generateFromFile(fileDestination);
-        } else {
+        } else if (artifactSource == ArtifactSource.APICURIO) {
             generateFromApicurio();
+        } else {
+            throw new MojoExecutionException("Execute failed! Artifact source location not known!");
         }
     }
 
     public void generateFromFile(String fileDestination) {
 
         try {
-            String ymlContent = null;
+            String ymlContent;
             try {
                 ymlContent = readSchemaContent(project.getBasedir() + "/target/generated/" + fileDestination);
                 parseAsyncApiJson(ymlContent, "");
             } catch (IOException e) {
                 e.printStackTrace();
             }
-
             getLog().info("Generation completed!");
-
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
     public String readSchemaContent(String fileName) {
-        String text = "";
+
+        System.out.println(fileName);
+
         try {
-            InputStream inputStream = getFileInputStream(fileName);
-            text = IOUtils.toString(inputStream, StandardCharsets.UTF_8.name());
-            inputStream.close();
-        } catch (URISyntaxException | IOException | ParseException e) {
+            return Files.readString(Paths.get(fileName));
+        } catch (IOException e) {
             e.printStackTrace();
         }
-        return text;
+        return null;
     }
-
-
-    public InputStream getFileInputStream(String fileName) throws URISyntaxException, IOException, ParseException {
-        ClassLoader classLoader = getClass().getClassLoader();
-        InputStream inputStream = new FileInputStream(fileName);
-
-        if (inputStream == null) {
-            throw new IllegalArgumentException("file not found! " + fileName);
-        } else {
-            return inputStream;
-        }
-    }
-
 
     public void cleanUpDirectories() {
         try {
-            FileUtils.deleteDirectory(Path.of(project.getBasedir() + "/aaa/src").toFile());
+            deleteDirectoryAll(project.getBasedir() + "/models");
         } catch (IOException e) {
             e.printStackTrace();
         }
+    }
+
+    public static void deleteDirectoryAll(String dir) throws IOException {
+
+        Path path = Paths.get(dir);
+        try (Stream<Path> walk = Files.walk(path)) {
+            walk
+                    .sorted(Comparator.reverseOrder())
+                    .forEach(AmqpGeneratorMojo::deleteDirectory);
+        }
+    }
+
+    // extract method to handle exception in lambda
+    public static void deleteDirectory(Path path) {
         try {
-            FileUtils.deleteDirectory(Path.of(project.getBasedir() + "/aaa/schemas").toFile());
+            Files.delete(path);
+        } catch (IOException e) {
+            System.err.printf("Unable to delete this path : %s%n%s", path, e);
+        }
+    }
+
+
+    public String readResourceFileContent(String fileName) {
+
+        System.out.println(fileName);
+        String text;
+        try {
+            try (InputStream is = getClass().getClassLoader().getResourceAsStream(fileName)) {
+                text = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+            }
+            return text;
         } catch (IOException e) {
             e.printStackTrace();
         }
+        return null;
 
-    }
-
-    public String readFileContent(String fileName) {
-        String text = "";
-        try {
-            InputStream inputStream = getResourceFileInputStream(fileName);
-            text = IOUtils.toString(inputStream, StandardCharsets.UTF_8.name());
-            inputStream.close();
-        } catch (URISyntaxException | IOException | ParseException e) {
-            e.printStackTrace();
-        }
-        return text;
-    }
-
-    public InputStream getResourceFileInputStream(String fileName) throws URISyntaxException, IOException, ParseException {
-        ClassLoader classLoader = getClass().getClassLoader();
-        InputStream inputStream = classLoader.getResourceAsStream(fileName);
-
-        if (inputStream == null) {
-            throw new IllegalArgumentException("file not found! " + fileName);
-        } else {
-            return inputStream;
-        }
     }
 
     public String readContentFromWeb(String contentUrl) throws IOException {
-        getLog().info("Reading AsyncApi definition from url: " + contentUrl);
-
-        URL url = new URL(contentUrl);
-        BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
-        StringBuilder builder = new StringBuilder();
-        String inputLine;
-        while ((inputLine = in.readLine()) != null) {
-            builder.append(inputLine);
-        }
-        in.close();
-        return builder.toString();
+        //TODO: for later use if needed
+        return "";
+//        getLog().info("Reading AsyncApi definition from url: " + contentUrl);
+//
+//        URL url = new URL(contentUrl);
+//        BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+//        StringBuilder builder = new StringBuilder();
+//        String inputLine;
+//        while ((inputLine = in.readLine()) != null) {
+//            builder.append(inputLine);
+//        }
+//        in.close();
+//        return builder.toString();
     }
 
-    public void writeFile(String fileName, String content) {
-        FileWriter myWriter = null;
+    public void writeSchemaFile(String fileName, String content) {
+        Path path = Paths.get(project.getBasedir() + temporarySchemaFolder + fileName);
+        content = content.replace("#", "file:");
+        content = content.replace(
+                "\\/components\\/schemas\\/",
+                project.getBasedir() + temporarySchemaFolder);
         try {
-            myWriter = new FileWriter(project.getBasedir() + temporarySchemaFolder + fileName);
-            content = content.replace("#", "file:");
-            content = content.replace(
-                    "\\/components\\/schemas\\/",
-                    project.getBasedir() + temporarySchemaFolder);
-            myWriter.write(content);
-            myWriter.close();
+            Files.writeString(path, content);
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -184,22 +175,23 @@ public class AmqpGeneratorMojo extends AbstractMojo {
     }
 
     public void writeFile(String fileName, String content, String path) {
-        FileWriter myWriter = null;
+
         try {
-            myWriter = new FileWriter(path + "/" + fileName);
-            myWriter.write(content);
-            myWriter.close();
+            Path clientPath = Paths.get(path);
+            Files.createDirectories(clientPath);
+
+            Path filePath = Paths.get(path + "/" + fileName);
+            Files.writeString(filePath, content);
         } catch (IOException e) {
             e.printStackTrace();
         }
-
     }
 
     public void drillDown(JSONObject root, String padding) {
         getLog().info("Creating JsonSchema files for model generator!");
 
         for (String key : (Iterable<String>) root.keySet()) {
-            writeFile(key, root.get(key).toString());
+            writeSchemaFile(key, root.get(key).toString());
         }
     }
 
@@ -215,8 +207,10 @@ public class AmqpGeneratorMojo extends AbstractMojo {
 
 
         //create directory structure
-        Path.of(project.getBasedir() + temporarySourceFolder).toFile().mkdirs();
-        Path.of(project.getBasedir() + temporarySchemaFolder).toFile().mkdirs();
+        Path pathSource = Paths.get(project.getBasedir() + temporarySourceFolder);
+        Path pathSchema = Paths.get(project.getBasedir() + temporarySchemaFolder);
+        Files.createDirectories(pathSource);
+        Files.createDirectories(pathSchema);
 
 
         drillDown(schemas, " ");
@@ -236,7 +230,7 @@ public class AmqpGeneratorMojo extends AbstractMojo {
     public void generateAdditonalFiles() {
 
         String supportDataPath = project.getBasedir() + temporarySourceFolder + packageName.replace(".", "/") + "/client/";
-        Path.of(supportDataPath).toFile().mkdirs();
+
         writeFile("Exchanges.java", prepareExchangeTemplate("Exchanges.java"), supportDataPath);
 
 
@@ -245,8 +239,8 @@ public class AmqpGeneratorMojo extends AbstractMojo {
 
     }
 
-    public String prepareExchangeTemplate(String templateFile){
-        String template = readFileContent(templateFile);
+    public String prepareExchangeTemplate(String templateFile) {
+        String template = readResourceFileContent(templateFile);
         template = template.replace("!!!", modelName);
         //TODO: generate whatever will be needed here...
         template = template.replace("#####", """
@@ -258,8 +252,8 @@ public class AmqpGeneratorMojo extends AbstractMojo {
         return template;
     }
 
-    public String preparePomTemplate(String templateFile){
-        String pomtemplate = readFileContent(templateFile);
+    public String preparePomTemplate(String templateFile) {
+        String pomtemplate = readResourceFileContent(templateFile);
         pomtemplate = pomtemplate.replace("XXXX", modelName);
         pomtemplate = pomtemplate.replace("YYYY", modelVersion);
         return pomtemplate;
@@ -295,8 +289,6 @@ public class AmqpGeneratorMojo extends AbstractMojo {
 
         codeModel.build(Path.of(project.getBasedir() + temporarySourceFolder).toFile());
     }
-
-
 
 
     public void generateFromApicurio() {
